Remove legacy local file storage
Production DB audit confirmed zero remaining /uploads legacy values and
zero accidentally-persisted presigned URLs across every migrated
persistent-asset column (teacher/student/admin photo, school logo,
report-card header, event image) — safe to remove the local-disk
upload architecture those columns used before Object Storage.

Removed: PersonalMediaController and its three authenticated legacy
read endpoints; the 5 legacy multipart write endpoints/methods across
Teacher/Student/Admin/SchoolController+Service; FileStorageProperties
and WebConfig's two local-disk static resource handlers; their
SecurityConfig permitAll rules and JwtAuthFilter/TenantValidationFilter
exemptions; ReportCardPdfGenerator's local-disk image-loading fallback
(ReportCardDataAssembler already resolves every value to a presigned
URL before it reaches the generator); the now-fully-unused
thumbnailator dependency; five now-dead *.photo/logo.directory
properties.

Also found and removed a second, unrelated orphaned resource handler
in IasManagementApplication (/uploads/images/**) dating back to the
original pre-JWT Keycloak-integration prototype, with no writer
anywhere in the codebase.

Knowledge Base, bulk CSV import, and the /app/uploads Docker volume
mount (which Knowledge Base still depends on) are untouched.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>